[gd_scene load_steps=24 format=2]

[ext_resource path="res://object/alert/alert.tscn" type="PackedScene" id=1]
[ext_resource path="res://object/notify_server/notify_server.tscn" type="PackedScene" id=2]
[ext_resource path="res://object/user_interface/user_interface.tscn" type="PackedScene" id=3]
[ext_resource path="res://asset/sounds/effect/hover_btn.mp3" type="AudioStream" id=4]
[ext_resource path="res://object/dialog/dialog_bottom.tscn" type="PackedScene" id=5]
[ext_resource path="res://asset/sprite2D/lab/DauSoiKinh.png" type="Texture" id=6]
[ext_resource path="res://asset/sprite2D/lab/Lamelle.png" type="Texture" id=7]
[ext_resource path="res://asset/sprite2D/lab/HopDungTieuBan.png" type="Texture" id=8]
[ext_resource path="res://asset/sprite2D/lab/GreenBoard.png" type="Texture" id=9]
[ext_resource path="res://asset/sprite2D/UI/bg_main.png" type="Texture" id=10]
[ext_resource path="res://scene/frame3/material_chemical.gd" type="Script" id=11]
[ext_resource path="res://asset/sprite2D/lab/GiayLauOngKinh.png" type="Texture" id=12]
[ext_resource path="res://asset/sprite2D/lab/LamKinh.png" type="Texture" id=13]
[ext_resource path="res://object/btn_info/btn_info.tscn" type="PackedScene" id=14]
[ext_resource path="res://object/hand_cursor/hand_cursor.tscn" type="PackedScene" id=15]

[sub_resource type="Animation" id=4]
resource_name = "DAU_SOI_KINH"
length = 10.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "dauSoiKinh"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "GIAY_LAU_ONG_KINH"
length = 16.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "giayLauOngKinh"
} ]
}

[sub_resource type="Animation" id=1]
resource_name = "GIOI_THIEU"
length = 13.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 5.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "gioiThieu"
}, {
"args": [  ],
"method": "gioiThieu1"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/HandCursor:mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 13.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/HandCursor:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 13.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 847, 499 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/HandCursor:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 13.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "HOP_DUNG_TIEU_BAN"
length = 13.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hopDungTieuBan"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "KET_THUC"
length = 6.7
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "ketThuc"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/HandCursor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 6.7 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 847, 499 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/HandCursor:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 6.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/HandCursor:mode")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 6.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "LAMELLE"
length = 13.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "lamelle"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "LAM_KINH"
length = 19.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "lamKinh"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/HandCursor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 847, 499 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/HandCursor:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/HandCursor:mode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="MaterialChemical" type="Node"]
script = ExtResource( 11 )

[node name="Interface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="Interface"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Interface"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_top = 39.0
margin_right = 240.0
margin_bottom = 339.0
texture = ExtResource( 9 )
expand = true

[node name="VatLieuHoaChat" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
mouse_filter = 1

[node name="GiayLauOngKinh" type="Sprite" parent="VatLieuHoaChat"]
position = Vector2( -404.5, -263.75 )
texture = ExtResource( 12 )

[node name="DauSoiKinh" type="Sprite" parent="VatLieuHoaChat"]
position = Vector2( -184.5, -240.75 )
scale = Vector2( 0.685144, 0.685144 )
texture = ExtResource( 6 )

[node name="Lamelle" type="Sprite" parent="VatLieuHoaChat"]
position = Vector2( -63.5, -186.75 )
scale = Vector2( 0.223077, 0.223077 )
texture = ExtResource( 7 )

[node name="HopDungTieuBan" type="Sprite" parent="VatLieuHoaChat"]
position = Vector2( 327.5, -252.75 )
scale = Vector2( 0.602018, 0.602018 )
texture = ExtResource( 8 )

[node name="LamKinh" type="Sprite" parent="VatLieuHoaChat"]
position = Vector2( 95.5, -179.75 )
scale = Vector2( 0.551923, 0.551923 )
texture = ExtResource( 13 )

[node name="ContainerButtonTick" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="GiayLauOngKinh" parent="ContainerButtonTick" instance=ExtResource( 14 )]
margin_left = 282.0
margin_top = 373.0
margin_right = 329.0
margin_bottom = 420.0
hover_sound = ExtResource( 4 )

[node name="DauSoiKinh" parent="ContainerButtonTick" instance=ExtResource( 14 )]
margin_left = 411.0
margin_top = 407.0
margin_right = 458.0
margin_bottom = 454.0
hover_sound = ExtResource( 4 )

[node name="Lamelle" parent="ContainerButtonTick" instance=ExtResource( 14 )]
margin_left = 544.0
margin_top = 466.0
margin_right = 591.0
margin_bottom = 513.0
hover_sound = ExtResource( 4 )

[node name="LamKinh" parent="ContainerButtonTick" instance=ExtResource( 14 )]
margin_left = 717.0
margin_top = 474.0
margin_right = 764.0
margin_bottom = 521.0
hover_sound = ExtResource( 4 )

[node name="HopDungTieuBan" parent="ContainerButtonTick" instance=ExtResource( 14 )]
margin_left = 975.0
margin_top = 340.0
margin_right = 1022.0
margin_bottom = 387.0
hover_sound = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Alert" parent="CanvasLayer" instance=ExtResource( 1 )]
unique_name_in_owner = true

[node name="Dialog" parent="CanvasLayer" instance=ExtResource( 5 )]
unique_name_in_owner = true
visible = false

[node name="UserInterface" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="NotifyServer" parent="CanvasLayer" instance=ExtResource( 2 )]
unique_name_in_owner = true

[node name="HandCursor" parent="CanvasLayer" instance=ExtResource( 15 )]
position = Vector2( 847, 499 )
mode = 0

[node name="Animation" type="AnimationPlayer" parent="."]
anims/DAU_SOI_KINH = SubResource( 4 )
anims/GIAY_LAU_ONG_KINH = SubResource( 3 )
anims/GIOI_THIEU = SubResource( 1 )
anims/HOP_DUNG_TIEU_BAN = SubResource( 7 )
anims/KET_THUC = SubResource( 8 )
anims/LAMELLE = SubResource( 5 )
anims/LAM_KINH = SubResource( 6 )
anims/RESET = SubResource( 2 )

[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
